# Django_helper

./: .flake8  .pre-commit-config.yaml  README.md  helper.txt  poentry_instruction.txt  pyenv_instructions.txt  pyproject.toml  pytest.ini  питон.txt
django_info/: creating_custom_django-comands.txt  pyenv_instructions.txt
django_info/DjORM-M2o/: code_from_lesson.txt  lecture.txt
django_info/DjORM_O2O/: O2O_relations.txt
django_info/Orm_CHOISES/: DjangoOrmChoises.txt  models_code_from_choises_lesson.txt
django_init/: .python-version  pyproject.toml  requirements.txt
django_init/backend/base/: models.py
django_init/backend/config/: settings.py  urls.py  yasg.py
django_init/backend/users/: models.py  urls.py
django_init/backend/users/migrations/: 0001_initial.py
django_init/backend/users/serializers/v1/: customer_registration_serializer.py  user_auth_serializer.py
django_init/backend/users/views/v1/: user_auth_view.py  user_registration_view.py
pub_sub(RabbitMQ)/ClassPubConsumer/: consumer.py  producer.py
pub_sub(RabbitMQ)/Competing_Consumers_Python_Implementation/: consumer.py  producer.py  producer_2.py
type_hints/: .python-version  Readme.md  pyproject.toml
type_hints/newType/: example1.py  example2.py
type_hints/typevar_generic_init/: base.py  example1.py  example2.py  example3.py  generic.py
vscode settings/: new_settings.json  settings.json
